--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:gridlayout-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
+    implementation 'com.jakewharton:butterknife:8.6.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
 
 //    implementation 'com.google.android.gms:play-services-maps:11.6.0'
 //    implementation 'com.google.android.gms:play-services-location:11.6.0'
